meta-monitor-config: Initialize MetaConfiguration's properly

We weren't initializing the ref count which means we could either be
leaking or end up using free'd memory.

https://bugzilla.gnome.org/show_bug.cgi?id=774135